# ubiq-c-cpp

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
package/: Dockerfile  Makefile  README.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  Docker.md  Dockerfile  README.md  common.c  common.h  getopt.c  ubiq_sample.c  ubiq_sample.cpp  ubiq_sample_fpe.c  ubiq_sample_fpe.cpp  ubiq_sample_structured.c  ubiq_sample_structured.cpp
src/ext/: CMakeLists.txt
src/include/ubiq/: platform.h
src/include/ubiq/platform/: builder.h  configuration.h  credentials.h  decrypt.h  deprecated_decrypt.h  deprecated_encrypt.h  encrypt.h  transform.h
src/include/ubiq/platform/compat/: cdefs.h
src/include/ubiq/platform/compat/sys/: param.h
src/include/ubiq/platform/internal/: algorithm.h  assert.h  billing.h  bn.h  cache.h  common.h  configuration.h  convert_radix_operation.h  credentials.h  dataset.h  dataset_cache.h  debug.h  decode_input_operation.h  decode_key_number_operation.h  decrypt_operation.h  decryption_pipeline.h  encode_input_operation.h  encode_key_number_operation.h  encrypt_operation.h  encryption_pipeline.h  expand_passthrough_characters_operation.h  expand_passthrough_prefix_operation.h  expand_passthrough_suffix_operation.h  ff1.h  ff1_cache.h  ffs_cache.h  ffx.h  hashtable.h  hashtable32.h  header.h  http.h  operation.h  operation_context.h  pad_input_operation.h  parsing.h  request.h  rest.h  rsa.h  sso.h  structured_key_cache.h  (+7 more)
src/lib/: CMakeLists.txt  algorithm.c  bcrypt.c  billing.c  bn.c  builder.c  builder.cpp  cache.c  common.c  configuration.c  configuration.cpp  convert_radix_operation.c  credentials.c  credentials.cpp  curl.c  dataset.c  dataset_cache.c  decode_input_operation.c  decode_key_number_operation.c  decrypt.c  decrypt.cpp  decrypt_operation.c  decrypt_session.cpp  decryption_pipeline.c  deprecated_encrypt.cpp  deprecated_fpe.c  encode_input_operation.c  encode_key_number_operation.c  encrypt.c  encrypt.cpp  encrypt_operation.c  encrypt_session.cpp  encryption_pipeline.c  expand_passthrough_characters_operation.c  expand_passthrough_prefix_operation.c  expand_passthrough_suffix_operation.c  ff1.c  ff1_cache.c  ff3_1.c  ffs_cache.c  (+30 more)
src/test/: CMakeLists.txt  bn.cpp  builder.cpp  cache.cpp  configuration.cpp  convert_radix_operation.cpp  credentials.cpp  dataset.cpp  dataset_cache.cpp  decode_input_operation.cpp  decode_key_number_operation.cpp  decrypt.cpp  deprecated_decrypt.cpp  deprecated_encrypt.cpp  deprecated_encrypt_new.cpp  encode_input_operation.cpp  encode_key_number_operation.cpp  encrypt.cpp  encrypt_operation.cpp  encryption_pipeline.cpp  expand_passthrough_characters_operation.cpp  expand_passthrough_prefix_operation.cpp  expand_passthrough_suffix_operation.cpp  ff1.cpp  ff1_cache.cpp  ff3_1.cpp  ffs_cache.cpp  ffx.cpp  fpedecrypt.cpp  fpeencrypt.cpp  fpeencrypt_new.cpp  global.cpp  hashtable.cpp  hashtable32.cpp  operation_context.cpp  pad_input_operation.cpp  parsing.cpp  request.cpp  rsa.cpp  structured_decrypt.cpp  (+14 more)
src/test/DATA/: 250k_a.json.REMOVED.git-id  250k_b.json.REMOVED.git-id  250k_c.json.REMOVED.git-id  250k_d.json.REMOVED.git-id
